# AdvancedRAG

knowledge_extraction/: .env.example  .gitignore  README.md  architecture.md  pyproject.toml
knowledge_extraction/config/: ontology.yaml
knowledge_extraction/config/evals/: graphrag_eval.json
knowledge_extraction/config/prompts/: claim_extraction.v1.j2  discovery_extraction.v1.j2  figure_interpretation.v1.j2  governed_extraction.v1.j2  lazy_subgraph_extract.v1.j2  lazy_synthesis.v1.j2  ontology_proposal.v1.j2
knowledge_extraction/knowledge_extraction/: __init__.py
knowledge_extraction/knowledge_extraction/application/pipelines/: __init__.py  orchestrator.py  stage_2a_extraction_governed.py  stage_2b_extraction_discovery.py  stage_2c_figure_interpretation.py  stages.py  (+3 more)
knowledge_extraction/knowledge_extraction/cli/: main.py  tour_app.py
knowledge_extraction/knowledge_extraction/config/: ontology_loader.py  settings.py
knowledge_extraction/knowledge_extraction/domain/: __init__.py  checkpoints.py  documents.py  entities.py  figures.py  graph.py  ontology.py
knowledge_extraction/knowledge_extraction/tui/: events.py
knowledge_extraction/tests/: conftest.py
knowledge_extraction/tests/integration/: test_smoke.py
knowledge_extraction/tests/unit/: test_canonicalization.py  test_checkpoint_clear_from.py  test_chunk_retriever.py  test_chunker.py  test_document_intelligence_adapter.py  test_evidence_graph_wiring.py  test_figure_pipeline.py  test_governance_repo.py  test_governed_figure_support.py  test_graphrag_agent.py  test_graphrag_eval.py  test_lazy_graphrag_agent.py  test_migration.py  test_ms_graphrag_agent.py  test_observability.py  test_ontology_loader.py  test_orchestrator_resume.py  test_pipeline_stages.py  test_query_rewriter.py  test_sqlite_schema_patch.py  test_tables.py  test_validator.py
(+41 files in other folders)
