[project]
name = "knowledge-extraction"
version = "0.1.0"
description = "Production-grade PDF knowledge extraction with ontology governance and GraphRAG."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AdvancedRAG" }]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "networkx>=3.3",
    "sqlalchemy>=2.0",
    "tenacity>=9.0",
    "aiofiles>=24.1",
    "orjson>=3.10",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rapidfuzz>=3.9",
    "pypdfium2>=4.30",
    "openai>=1.40",
    "azure-identity>=1.17",
    "azure-ai-documentintelligence>=1.0.0b4",
    "docling>=1.0",
    "qdrant-client>=1.10",
    "graphrag>=0.3.6",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "structlog>=24.4",
    "python-dotenv>=1.2.2",
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
ke = "knowledge_extraction.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "mypy>=1.11",
    "ruff>=0.6",
    "pre-commit>=3.8",
    "types-PyYAML",
]
tour = [
    "streamlit>=1.36",
    "pandas>=2.2",
    "plotly>=5.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knowledge_extraction"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
files = ["knowledge_extraction", "tests"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
